--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="search_hint">Enter city name</string>
 
     <string name="currentWeather">Current weather</string>
+    <string name="twoDaysWeather">Two days forecast</string>
     <string name="search">Search</string>
 </resources>
