--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="temperature">Temperature, °C</string>
     <string name="feelsLike">Feels like, °C</string>
     <string name="humidity">Humidity, %</string>
-    <string name="pressure">Pressure, hPa</string>
+    <string name="pressure">Pressure, mm Hg</string>
     <string name="dewPoint">Dew point, °C</string>
     <string name="clouds">Clouds, %</string>
+    <string name="windSpeed">Wind speed, m/s</string>
+    <string name="windDirection">Wind direction</string>
     <string name="visibility">Visibility, m</string>
 
     <string name="currentWeather">Current weather</string>
