Started implementing seven days forecast

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
 
     <string name="currentWeather">Current weather</string>
     <string name="twoDaysWeather">Two days forecast</string>
+    <string name="sevenDaysWeather">Seven days forecast</string>
     <string name="search">Search</string>
 </resources>
