--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,13 @@
     <string name="sunrise">Sunrise</string>
     <string name="sunset">Sunset</string>
 
+    <string name="temperatureMin">Min temperature, °C</string>
+    <string name="temperatureMax">Max temperature, °C</string>
+    <string name="morning">Morning</string>
+    <string name="day">Day</string>
+    <string name="evening">Evening</string>
+    <string name="night">Night</string>
+
     <string name="currentWeather">Current weather</string>
     <string name="twoDaysWeather">Two days forecast</string>
     <string name="sevenDaysWeather">Seven days forecast</string>
