--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="day">Day</string>
     <string name="evening">Evening</string>
     <string name="night">Night</string>
+    <string name="wind">Wind</string>
 
     <string name="currentWeather">Current weather</string>
     <string name="twoDaysWeather">Two days forecast</string>
